ncc/testsuite/negative/wrong-args.n
class A <'a, 'b> {}
class B <'a> : A ['a] {} // E: type `A' takes 2 argument.* while 1 were supplied
class C : A {} // E: type `A' takes 2 argument.* while 0 were supplied
